# uxlens

./: README.md  pyproject.toml
examples/: demo.py  uxlens_locate_anything_colab.ipynb
tests/: test_rules.py
uxlens/: __init__.py  audit.py  capture.py  cli.py  report.py  types.py
uxlens/locator/: __init__.py  base.py  locate_anything.py  mock.py
uxlens/rules/: __init__.py  base.py  cta.py  forms.py  trust.py
