[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uxlens"
version = "0.1.0"
description = "A linter for your landing pages — screenshot a URL, locate the UX elements, and get ranked conversion (CRO) findings."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Kannan" }]
keywords = ["cro", "ux", "conversion", "audit", "vision", "landing-page", "playwright"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright>=1.40",
    "pillow>=10.0",
]

[project.optional-dependencies]
# The real LocateAnything backend (heavy: needs torch + a GPU ideally).
model = [
    "torch>=2.1",
    # LocateAnything's remote code targets this exact version; newer ones
    # break (_check_and_adjust_attn_implementation signature changed).
    "transformers==4.57.1",
    "accelerate>=0.30",
    # Required by LocateAnything's remote modeling code.
    "decord>=0.6",
    "lmdb>=1.4",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
uxlens = "uxlens.cli:main"

[project.urls]
Homepage = "https://github.com/kannajune/uxlens"
Issues = "https://github.com/kannajune/uxlens/issues"

[tool.hatch.build.targets.wheel]
packages = ["uxlens"]
